--- a/loopsconditions.html
+++ b/loopsconditions.html
@@ -188,7 +188,7 @@
 
 <!-- ===== HEADER WITH LOGO AND SCROLLING TEXT ===== -->
 <header>
-  <img src="c:\Users\DESKTOP\Pictures\c.png" alt="Logo" />
+  <img src="c.png" alt="Logo" />
   <h1>Loops and Conditions Showcase</h1>
   <p>Created by <strong>GROUP 2 — IT-ELECT</strong> | HTML • CSS • JavaScript</p>
 
@@ -377,3 +377,4 @@
 </script>
 </body>
 </html>
+
